@@ -93,15 +93,14 @@ int main (int argc, char *argv[]) {
         return -1;
       }
 
-      MessageTypeSupportImpl* servant = new MessageTypeSupportImpl();
-      TAO::DCPS::LocalObject_var safe_servant = servant;
+      MessageTypeSupport_var mts = new MessageTypeSupportImpl();
 
-      if (DDS::RETCODE_OK != servant->register_type(participant.in (), "")) {
+      if (DDS::RETCODE_OK != mts->register_type(participant.in (), "")) {
         cerr << "register_type failed." << endl;
         exit(1);
       }
 
-      CORBA::String_var type_name = servant->get_type_name ();
+      CORBA::String_var type_name = mts->get_type_name ();
 
       DDS::TopicQos topic_qos;
       participant->get_default_topic_qos(topic_qos);
