@@ -1,3 +1,15 @@
+Tue Jul 03 00:50:18 UTC 2007  Scott Harris  <harris_s@ociweb.com>
+
+       *  DDS_release_notes.txt:
+        
+          Add a clarification.
+
+        * DevGuideExamples/DCPS/Messenger/publisher.cpp:
+        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:
+        
+          Update the example per DDS_release_notes.txt recommondations
+          for switch from remote to local interfaces.
+
 Mon Jul  2 22:36:05 UTC 2007  Yan Dai  <dai_y@ociweb.com>
 
         * tests/DCPS/DcpsIntegration/topic.cpp:
